--- a/architecture/index.html
+++ b/architecture/index.html
@@ -1,6 +1,7 @@
 <html> <!--overall-->
 <head>
-	<link rel="stylesheet" href="main.css">
+  <link rel="stylesheet" href="../main.css">
+  <link rel="stylesheet" href="architecture.css">
 </head>
 <body><html> <!--overall-->
   
@@ -13,18 +14,18 @@
   <a href="http://vickywang.design/"
      class="pointer"> VICKY WANG
     </a>
-  <p class="lighter_grey"> DESIGN & RESEARCH
+  <p class="lighter_font" id="topleftlighterfont"> DESIGN & RESEARCH
    </p>
 </div>
     
 <div class="container_right">
- <div> <a> DESIGN </a>
+ <div> <a class="inactive"> DESIGN </a>
    </div>
-  <div> <a> ARCHITECTURE </a>
+  <div > <a class="active"> ARCHITECTURE </a>
     </div>
-  <div> <a> PHOTOGRAPHY </a>
+  <div> <a class="inactive"> PHOTOGRAPHY </a>
    </div> 
- <div> <a> ABOUT </a>
+ <div> <a class="inactive"> ABOUT </a>
    </div>
   </div>
   
@@ -34,7 +35,7 @@
 <!--body1-->
 <div class="container_body">
   <img src="https://s3-us-west-1.amazonaws.com/vickywang.design/architecture/RC_Diagram.svg" 
-       alt="RECREATION COMMONS" class="image" id="image-rc">
+       alt="RECREATION COMMONS" class="image-hover" id="image-rc">
   
   <div class="image-text">
     <div class="text_button"><a href="/architecture/recreation_commons">RECREATION COMMONS</div>
@@ -44,7 +45,7 @@
 <!--body2-->  
 <div class="container_body">
   <img src="https://s3-us-west-1.amazonaws.com/vickywang.design/architecture/NS_Render.jpg" 
-       alt="RECREATION COMMONS" class="image">
+       alt="RECREATION COMMONS" class="image-hover">
   
   <div class="image-text">
     <div class="text_button">NARROW STRIPES</div>
@@ -54,7 +55,7 @@
 <!--body3-->  
 <div class="container_body">
   <img src="https://s3-us-west-1.amazonaws.com/vickywang.design/architecture/MG_Diagram.jpg" 
-       alt="MANIFOLD GROUND" class="image">
+       alt="MANIFOLD GROUND" class="image-hover">
   
   <div class="image-text">
     <div class="text_button">MANIFOLD GROUND</div>
