--- a/architecture/recreation_commons/index.html
+++ b/architecture/recreation_commons/index.html
@@ -2,7 +2,7 @@
 <!--overall-->
 
 <head>
-  <link rel="stylesheet" href="main.css">
+  <link rel="stylesheet" href="../../main.css">
 </head>
 
 <body>
@@ -39,10 +39,10 @@
     <div class="container_body">
       <img
         src="https://s3-us-west-1.amazonaws.com/vickywang.design/architecture/recreation_commons/Arch_Rec_Conms_Street+View.jpg"
-        alt="STREET VIEW" class="image" id="image-rc">
+        alt="STREET VIEW" class="image" >
 
       <div class="image-text">
-        <div class="text_button">STREET VIEW</div>
+        <div>STREET VIEW</div>
       </div>
     </div>
     <!--body1-->
