--- a/architecture/index.html
+++ b/architecture/index.html
@@ -1,92 +1,95 @@
-<html> <!--overall-->
+<html>
+<!--overall-->
+
 <head>
   <link rel="stylesheet" href="../main.css">
-  <link rel="stylesheet" href="architecture.css">
 </head>
-<body><html> <!--overall-->
-  
-<div class= margin>
 
-<!--head-->
-<div class="container_head">
-  
-<div class="container_left">
-  <a href="http://vickywang.design/"
-     class="pointer"> VICKY WANG
-    </a>
-  <p class="lighter_font" id="topleftlighterfont"> DESIGN & RESEARCH
-   </p>
-</div>
-    
-<div class="container_right">
- <div> <a class="inactive"> DESIGN </a>
-   </div>
-  <div > <a class="active"> ARCHITECTURE </a>
+<body class="style">
+  <!--head-->
+  <div class="container_head">
+
+    <div class="container_left">
+      <a href="http://vickywang.design/" class="pointer"> VICKY WANG
+      </a>
+      <p class="lighter_font" id="topleftlighterfont"> DESIGN & RESEARCH
+      </p>
     </div>
-  <div> <a class="inactive"> PHOTOGRAPHY </a>
-   </div> 
- <div> <a class="inactive"> ABOUT </a>
-   </div>
-  </div>
-  
-</div>
-<!--head-->
-  
-<!--body1-->
-<div class="container_body">
-  <img src="https://s3-us-west-1.amazonaws.com/vickywang.design/architecture/RC_Diagram.svg" 
-       alt="RECREATION COMMONS" class="image-hover" id="image-rc">
-  
-  <div class="image-text">
-    <div class="text_button"><a href="/architecture/recreation_commons">RECREATION COMMONS</div>
-  </div>
-</div>
-<!--body1-->  
-<!--body2-->  
-<div class="container_body">
-  <img src="https://s3-us-west-1.amazonaws.com/vickywang.design/architecture/NS_Render.jpg" 
-       alt="RECREATION COMMONS" class="image-hover">
-  
-  <div class="image-text">
-    <div class="text_button">NARROW STRIPES</div>
-  </div>
-</div>
-<!--body2-->  
-<!--body3-->  
-<div class="container_body">
-  <img src="https://s3-us-west-1.amazonaws.com/vickywang.design/architecture/MG_Diagram.jpg" 
-       alt="MANIFOLD GROUND" class="image-hover">
-  
-  <div class="image-text">
-    <div class="text_button">MANIFOLD GROUND</div>
-  </div>
-</div>
-<!--body3-->  
-  
-  
-<!--foot-->
-<div class="container_foot">
 
-<div id="infor">
- <div> <a href="mailto:vickyw.design@gmail.com"><img class="image_footer" src= "https://s3-us-west-1.amazonaws.com/vickywang.design/Icons_mail.svg" alt="email" ></a>
-   
-   </div>
- <div> <a href="https://www.linkedin.com/in/vicky-wang-6ab7487b"><img class="image_footer" src="https://s3-us-west-1.amazonaws.com/vickywang.design/Icons_linkedin.svg" alt="linkedin" width="50" height="50">
-   </a> </div>
-  
-  <div> <a href="https://medium.com/@vickywang.design"><img class="image_footer" src="https://s3-us-west-1.amazonaws.com/vickywang.design/Icons_medium.svg" alt="medium" width="50" height="50"> </a>
+    <div class="container_right">
+      <div> <a class="inactive"> DESIGN </a>
+      </div>
+      <div> <a class="active"> ARCHITECTURE </a>
+      </div>
+      <div> <a class="inactive"> PHOTOGRAPHY </a>
+      </div>
+      <div> <a class="inactive"> ABOUT </a>
+      </div>
+    </div>
+
   </div>
-  
-    <div> <a href="https://github.com/vicky-wyq"><img class="image_footer" src="https://s3-us-west-1.amazonaws.com/vickywang.design/Icons_github.svg" alt="github" width="50" height="50"> </a>
+  <!--head-->
+
+  <!--body1-->
+  <div class="container_body">
+    <img src="https://s3-us-west-1.amazonaws.com/vickywang.design/architecture/RC_Diagram.svg" alt="RECREATION COMMONS"
+      class="image-hover" id="image-rc">
+
+    <div class="image-text-hover">
+      <div><a href="/architecture/recreation_commons">RECREATION COMMONS</div>
+    </div>
   </div>
+  <!--body1-->
+  <!--body2-->
+  <div class="container_body">
+    <img src="https://s3-us-west-1.amazonaws.com/vickywang.design/architecture/NS_Render.jpg" alt="RECREATION COMMONS"
+      class="image-hover">
+
+    <div class="image-text-hover">
+      <div>NARROW STRIPES</div>
+    </div>
   </div>
-<p class="lighter_grey">COPYRIGHT© VICKY WANG
-  </p>
-  
-</div>
-  
-</div>  
-</html> <!--overall-->
+  <!--body2-->
+  <!--body3-->
+  <div class="container_body">
+    <img src="https://s3-us-west-1.amazonaws.com/vickywang.design/architecture/MG_Diagram.jpg" alt="MANIFOLD GROUND"
+      class="image-hover">
+
+    <div class="image-text-hover">
+      <div>MANIFOLD GROUND</div>
+    </div>
+  </div>
+  <!--body3-->
+
+
+  <!--foot-->
+  <div class="container_footer">
+
+    <div id="infor">
+      <div> <a href="mailto:vickyw.design@gmail.com"><img class="image_footer"
+            src="https://s3-us-west-1.amazonaws.com/vickywang.design/Icons_mail.svg" alt="email"></a>
+
+      </div>
+      <div> <a href="https://www.linkedin.com/in/vicky-wang-6ab7487b"><img class="image_footer"
+            src="https://s3-us-west-1.amazonaws.com/vickywang.design/Icons_linkedin.svg" alt="linkedin" width="50"
+            height="50">
+        </a> </div>
+
+      <div> <a href="https://medium.com/@vickywang.design"><img class="image_footer"
+            src="https://s3-us-west-1.amazonaws.com/vickywang.design/Icons_medium.svg" alt="medium" width="50"
+            height="50"> </a>
+      </div>
+
+      <div> <a href="https://github.com/vicky-wyq"><img class="image_footer"
+            src="https://s3-us-west-1.amazonaws.com/vickywang.design/Icons_github.svg" alt="github" width="50"
+            height="50"> </a>
+      </div>
+    </div>
+    <p class="lighter_font">COPYRIGHT© VICKY WANG
+    </p>
+
+  </div>
 </body>
 
-</html> <!--overall-->
+</html>
+<!--overall-->
