--- a/index.html
+++ b/index.html
@@ -4,83 +4,70 @@
   <link rel="stylesheet" href="main.css">
 </head>
 
-<body>
-  <div class= margin>
+<body class="style">
+  <!--head-->
+  <div class="container_head">
 
-    <!--head-->
-    <div class="container_head">
-
-      <div class="container_left">
-        <a href="http://vickywang.design/"> VICKY WANG
-        </a>
-        <p class="lighter_font" id="topleftlighterfont"> DESIGN & RESEARCH
-        </p>
-      </div>
-
-      <div class="container_right">
-        <div> <a> DESIGN </a>
-        </div>
-        <div> <a href="/architecture"> ARCHITECTURE </a>
-        </div>
-        <div> <a href="/photography"> PHOTOGRAPHY </a>
-        </div>
-        <div> <a href="/about"> ABOUT </a>
-        </div>
-      </div>
-
-    </div>
-    <!--head-->
-
-    <!--body-->
-    <div class="container_body">
-      <img src="https://s3-us-west-1.amazonaws.com/vickywang.design/kappe_house.jpg" 
-       alt="DRAWING OF KAPPE RAY HOUSE"
-       class="image-hover">
-
-      <div class="image-text">
-        <div class="text">DRAWING OF KAPPE RAY HOUSE</div>
-      </div>
-    </div>
-    <!--body-->
-
-    <!--footer-->
-    <div class="container_foot">
-
-      <div id="infor">
-        <div> <a href="mailto:vickyw.design@gmail.com">
-          <img class="image_footer"
-              src="https://s3-us-west-1.amazonaws.com/vickywang.design/Icons_mail.svg" 
-              alt="email"></a>
-
-        </div>
-        <div> <a href="https://www.linkedin.com/in/vicky-wang-6ab7487b">
-         <img 
-              class="image_footer"
-              src="https://s3-us-west-1.amazonaws.com/vickywang.design/Icons_linkedin.svg" 
-              alt="linkedin" width="50"
-              height="50">
-          </a> </div>
-
-        <div> <a href="https://medium.com/@vickywang.design">
-          <img class="image_footer"
-           src="https://s3-us-west-1.amazonaws.com/vickywang.design/Icons_medium.svg" 
-           alt="medium" width="50" height="50"> </a>
-        </div>
-
-        <div> <a href="https://github.com/vicky-wyq">
-          <img class="image_footer" 
-          src="https://s3-us-west-1.amazonaws.com/vickywang.design/Icons_github.svg" 
-          alt="github" width="50" height="50"> </a>
-        </div>
-      </div>
-
-      <p class="lighter_font"> ©COPYRIGHT VICKY WANG
+    <div class="container_left">
+      <a href="http://vickywang.design/"> VICKY WANG
+      </a>
+      <p class="lighter_font" id="topleftlighterfont"> DESIGN & RESEARCH
       </p>
+    </div>
 
+    <div class="container_right">
+      <div> <a> DESIGN </a>
+      </div>
+      <div> <a href="/architecture"> ARCHITECTURE </a>
+      </div>
+      <div> <a href="/photography"> PHOTOGRAPHY </a>
+      </div>
+      <div> <a href="/about"> ABOUT </a>
+      </div>
     </div>
 
   </div>
+  <!--head-->
 
+  <!--body-->
+  <div class="container_body">
+    <img src="https://s3-us-west-1.amazonaws.com/vickywang.design/kappe_house.jpg" alt="DRAWING OF KAPPE RAY HOUSE"
+      class="image-hover">
+
+    <div class="image-text-hover">
+      <div class="text">DRAWING OF KAPPE RAY HOUSE</div>
+    </div>
+  </div>
+  <!--body-->
+
+  <!--footer-->
+  <div class="container_footer">
+    <div id="infor">
+      <div> <a href="mailto:vickyw.design@gmail.com">
+          <img class="image_footer" src="https://s3-us-west-1.amazonaws.com/vickywang.design/Icons_mail.svg"
+            alt="email"></a>
+
+      </div>
+      <div> <a href="https://www.linkedin.com/in/vicky-wang-6ab7487b">
+          <img class="image_footer" src="https://s3-us-west-1.amazonaws.com/vickywang.design/Icons_linkedin.svg"
+            alt="linkedin" width="50" height="50">
+        </a> </div>
+
+      <div> <a href="https://medium.com/@vickywang.design">
+          <img class="image_footer" src="https://s3-us-west-1.amazonaws.com/vickywang.design/Icons_medium.svg"
+            alt="medium" width="50" height="50"> </a>
+      </div>
+
+      <div> <a href="https://github.com/vicky-wyq">
+          <img class="image_footer" src="https://s3-us-west-1.amazonaws.com/vickywang.design/Icons_github.svg"
+            alt="github" width="50" height="50"> </a>
+      </div>
+    </div>
+
+    <p class="lighter_font"> ©COPYRIGHT VICKY WANG
+    </p>
+
+  </div>
 </body>
 
 </html>
