--- a/architecture/recreation_commons/index.html
+++ b/architecture/recreation_commons/index.html
@@ -15,15 +15,14 @@
       <p class="lighter_font" id="topleftlighterfont"> DESIGN & RESEARCH
       </p>
     </div>
-
     <div class="container_right">
-      <div> <a> DESIGN </a>
+      <div> <a href="/design"> DESIGN </a>
       </div>
-      <div> <a> ARCHITECTURE </a>
+      <div> <a href="/architecture"> ARCHITECTURE </a>
       </div>
-      <div> <a> PHOTOGRAPHY </a>
+      <div> <a href="/photography"> PHOTOGRAPHY </a>
       </div>
-      <div> <a> ABOUT </a>
+      <div> <a href="/about"> ABOUT </a>
       </div>
     </div>
 
