--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <link rel="stylesheet" href="main.css">
 </head>
 
-<body class="style">
+<body>
   <!--head-->
   <div class="container_head">
 
@@ -16,7 +16,7 @@
     </div>
 
     <div class="container_right">
-      <div> <a> DESIGN </a>
+      <div> <a herf="/design"> DESIGN </a>
       </div>
       <div> <a href="/architecture"> ARCHITECTURE </a>
       </div>
