--- a/about/index.html
+++ b/about/index.html
@@ -5,7 +5,7 @@
   <link rel="stylesheet" href="../main.css">
 </head>
 
-<body>
+<body class="style">
   <!--head-->
   <div class="container_head">
 
@@ -15,15 +15,14 @@
       <p class="lighter_font" id="topleftlighterfont"> DESIGN & RESEARCH
       </p>
     </div>
-
     <div class="container_right">
       <div> <a href="/design" class="inactive"> DESIGN </a>
       </div>
-      <div> <a href="/architecture" class="active"> ARCHITECTURE </a>
+      <div> <a href="/architecture"class="inactive"> ARCHITECTURE </a>
       </div>
       <div> <a href="/photography" class="inactive"> PHOTOGRAPHY </a>
       </div>
-      <div> <a href="/about" class="inactive"> ABOUT </a>
+      <div> <a herf="/about" class="active"> ABOUT </a>
       </div>
     </div>
 
@@ -32,34 +31,39 @@
 
   <!--body1-->
   <div class="container_body">
-    <img src="https://s3-us-west-1.amazonaws.com/vickywang.design/architecture/RC_Diagram.svg" alt="RECREATION COMMONS"
-      class="image-hover" id="image-rc">
-
-    <div class="image-text-hover">
-      <div><a href="/architecture/recreation_commons">RECREATION COMMONS</div>
-    </div>
+    <img
+      src="https://s3-us-west-1.amazonaws.com/vickywang.design/about/me.jpg"
+      alt="me" class="image-me">
+      <div class="image-text">About</div>
+    
   </div>
+
   <!--body1-->
   <!--body2-->
   <div class="container_body">
-    <img src="https://s3-us-west-1.amazonaws.com/vickywang.design/architecture/NS_Render.jpg" alt="RECREATION COMMONS"
-      class="image-hover">
-
-    <div class="image-text-hover">
-      <div>NARROW STRIPES</div>
-    </div>
+    <img
+      src="https://s3-us-west-1.amazonaws.com/vickywang.design/architecture/recreation_commons/Arch_Rec_Conms_Diagram.jpg"
+      alt="DIAGRAM" class="image">
+      <div class="image-text">DIAGRAM</div>
   </div>
   <!--body2-->
   <!--body3-->
   <div class="container_body">
-    <img src="https://s3-us-west-1.amazonaws.com/vickywang.design/architecture/MG_Diagram.jpg" alt="MANIFOLD GROUND"
-      class="image-hover">
-
-    <div class="image-text-hover">
-      <div>MANIFOLD GROUND</div>
-    </div>
+    <img
+      src="https://s3-us-west-1.amazonaws.com/vickywang.design/architecture/recreation_commons/Arch_Rec_Conms_Diagram2.jpg"
+      alt="DIAGRAM" class="image">
+      <div class="image-text">DIAGRAM</div>
   </div>
   <!--body3-->
+  <!--body4-->
+
+  <div class="container_body">
+    <img
+      src="https://s3-us-west-1.amazonaws.com/vickywang.design/architecture/recreation_commons/Arch_Rec_Conms_Street+View.jpg"
+      alt="STREET VIEW" class="image">
+      <div class="image-text">STREET VIEW</div>
+  </div>
+  <!--body4-->
 
 
   <!--foot-->
@@ -85,6 +89,7 @@
             height="50"> </a>
       </div>
     </div>
+
     <p class="lighter_font">COPYRIGHT© VICKY WANG
     </p>
 
