--- a/photography/index.html
+++ b/photography/index.html
@@ -19,9 +19,9 @@
     <div class="container_right">
       <div> <a href="/design" class="inactive"> DESIGN </a>
       </div>
-      <div> <a href="/architecture" class="active"> ARCHITECTURE </a>
+      <div> <a href="/architecture" class="inactive"> ARCHITECTURE </a>
       </div>
-      <div> <a href="/photography" class="inactive"> PHOTOGRAPHY </a>
+      <div> <a href="/photography" class="active"> PHOTOGRAPHY </a>
       </div>
       <div> <a href="/about" class="inactive"> ABOUT </a>
       </div>
@@ -29,38 +29,41 @@
 
   </div>
   <!--head-->
-
+<div class="container_body">
   <!--body1-->
-  <div class="container_body">
-    <img src="https://s3-us-west-1.amazonaws.com/vickywang.design/architecture/RC_Diagram.svg" alt="RECREATION COMMONS"
-      class="image-hover" id="image-rc">
-
-    <div class="image-text-hover">
-      <div><a href="/architecture/recreation_commons">RECREATION COMMONS</div>
-    </div>
+  <div>
+    <img
+      src="https://s3-us-west-1.amazonaws.com/vickywang.design/photography/12272019_9.jpg"
+      alt="White Sands National Monument" class="image">
+      <div class="image-text">White Sands National Monument</div>
   </div>
   <!--body1-->
   <!--body2-->
-  <div class="container_body">
-    <img src="https://s3-us-west-1.amazonaws.com/vickywang.design/architecture/NS_Render.jpg" alt="RECREATION COMMONS"
-      class="image-hover">
-
-    <div class="image-text-hover">
-      <div>NARROW STRIPES</div>
-    </div>
+  <div>
+    <img
+      src="https://s3-us-west-1.amazonaws.com/vickywang.design/photography/12272019_8.jpg"
+      alt="White Sands National Monument">
+      <div class="image-text">White Sands National Monument</div>
   </div>
   <!--body2-->
   <!--body3-->
-  <div class="container_body">
-    <img src="https://s3-us-west-1.amazonaws.com/vickywang.design/architecture/MG_Diagram.jpg" alt="MANIFOLD GROUND"
-      class="image-hover">
-
-    <div class="image-text-hover">
-      <div>MANIFOLD GROUND</div>
-    </div>
+  <div>
+    <img
+      src="https://s3-us-west-1.amazonaws.com/vickywang.design/photography/12272019_7.jpg"
+      alt="White Sands National Monument">
+      <div class="image-text">White Sands National Monument</div>
   </div>
   <!--body3-->
+  <!--body4-->
 
+  <div>
+    <img
+      src="https://s3-us-west-1.amazonaws.com/vickywang.design/photography/12272019_6.jpg"
+      alt="White Sands National Monument">
+      <div class="image-text">White Sands National Monument</div>
+  </div>
+  <!--body4-->
+</div>
 
   <!--foot-->
   <div class="container_footer">
@@ -85,6 +88,7 @@
             height="50"> </a>
       </div>
     </div>
+
     <p class="lighter_font">COPYRIGHT© VICKY WANG
     </p>
 
