--- a/about/index.html
+++ b/about/index.html
@@ -18,7 +18,7 @@
     <div class="container_right">
       <div> <a href="/design" class="inactive"> DESIGN </a>
       </div>
-      <div> <a href="/architecture"class="inactive"> ARCHITECTURE </a>
+      <div> <a href="/architecture" class="inactive"> ARCHITECTURE </a>
       </div>
       <div> <a href="/photography" class="inactive"> PHOTOGRAPHY </a>
       </div>
@@ -29,64 +29,76 @@
   </div>
   <!--head-->
 
-  <!--body1-->
+  <!--body_intro-->
+  <div class="container-about">
   <div class="container_body">
-    <img
-      src="https://s3-us-west-1.amazonaws.com/vickywang.design/about/me.jpg"
-      alt="me" class="image-me">
-      <div class="image-text">About</div>
-    
+    <img src="https://s3-us-west-1.amazonaws.com/vickywang.design/about/me.png" alt="me"
+      id="image-me">
+    <div class="text-about-hi">Hello, I'm Vicky</div>
+    <div class="text-about-intro">
+      A Designer currently working as a freelancer Based San Francisco.</div>
+    <div class="text-about-intro">
+      I've worked on digital products related to design and code.</div>
+  </div>
+  <!--body_intro-->
+  <hr>
+
+  <!--body_experience-->
+  <div class="container_resume">
+  <div class="container_body_about">
+    <div class="text-about-left">EXPERIENCE</div>
+    <div class="text-about-right">
+      <div>Freelancer | Aug. 2019 – current | San Francisco | Product Designer</div>
+      <div>Buro OS | Aug. 2017 – Jul. 2018 | Beijing | Architectural Assistant</div>
+    </div>
+    <!--<div class="vertical-line"></div>..!>-->
+  </div>
+  <hr>
+
+  <div class="container_body_about">
+    <div class="text-about-left">EDUCATION</div>
+    <div class="text-about-right">
+      <div>University of California, Berkeley
+        UC Berkeley | Aug. 2015 – May. 2019 | M. Arch. </div>
+      <div>| Architectural and Building Science/ Technology</div>
+    </div>
+  </div>
+  </div>
   </div>
 
-  <!--body1-->
-  <!--body2-->
-  <div class="container_body">
-    <img
-      src="https://s3-us-west-1.amazonaws.com/vickywang.design/architecture/recreation_commons/Arch_Rec_Conms_Diagram.jpg"
-      alt="DIAGRAM" class="image">
-      <div class="image-text">DIAGRAM</div>
-  </div>
-  <!--body2-->
-  <!--body3-->
-  <div class="container_body">
-    <img
-      src="https://s3-us-west-1.amazonaws.com/vickywang.design/architecture/recreation_commons/Arch_Rec_Conms_Diagram2.jpg"
-      alt="DIAGRAM" class="image">
-      <div class="image-text">DIAGRAM</div>
-  </div>
-  <!--body3-->
-  <!--body4-->
-
-  <div class="container_body">
-    <img
-      src="https://s3-us-west-1.amazonaws.com/vickywang.design/architecture/recreation_commons/Arch_Rec_Conms_Street+View.jpg"
-      alt="STREET VIEW" class="image">
-      <div class="image-text">STREET VIEW</div>
-  </div>
-  <!--body4-->
 
 
   <!--foot-->
   <div class="container_footer">
 
     <div id="infor">
-      <div> <a href="mailto:vickyw.design@gmail.com"><img class="image_footer"
-            src="https://s3-us-west-1.amazonaws.com/vickywang.design/Icons_mail.svg" alt="email"></a>
+      <div>
+        <a href="mailto:vickyw.design@gmail.com">
+          <img class="image_footer"
+            src="https://s3-us-west-1.amazonaws.com/vickywang.design/Icons_mail.svg" alt="email">
+        </a>
 
       </div>
-      <div> <a href="https://www.linkedin.com/in/vicky-wang-6ab7487b"><img class="image_footer"
-            src="https://s3-us-west-1.amazonaws.com/vickywang.design/Icons_linkedin.svg" alt="linkedin" width="50"
-            height="50">
-        </a> </div>
-
-      <div> <a href="https://medium.com/@vickywang.design"><img class="image_footer"
-            src="https://s3-us-west-1.amazonaws.com/vickywang.design/Icons_medium.svg" alt="medium" width="50"
-            height="50"> </a>
+      <div>
+        <a href="https://www.linkedin.com/in/vicky-wang-6ab7487b">
+          <img class="image_footer"
+            src="https://s3-us-west-1.amazonaws.com/vickywang.design/Icons_linkedin.svg"
+            alt="linkedin">
+        </a>
       </div>
 
-      <div> <a href="https://github.com/vicky-wyq"><img class="image_footer"
-            src="https://s3-us-west-1.amazonaws.com/vickywang.design/Icons_github.svg" alt="github" width="50"
-            height="50"> </a>
+      <div>
+        <a href="https://medium.com/@vickywang.design">
+          <img class="image_footer"
+            src="https://s3-us-west-1.amazonaws.com/vickywang.design/Icons_medium.svg" alt="medium">
+        </a>
+      </div>
+
+      <div>
+        <a href="https://github.com/vicky-wyq">
+          <img class="image_footer"
+            src="https://s3-us-west-1.amazonaws.com/vickywang.design/Icons_github.svg" alt="github">
+        </a>
       </div>
     </div>
 
