--- a/about/index.html
+++ b/about/index.html
@@ -5,17 +5,17 @@
   <link rel="stylesheet" href="../main.css">
 </head>
 
-<body class="style">
+<body>
   <!--head-->
-  <div class="container_head">
+  <div class="container-head">
 
-    <div class="container_left">
+    <div class="container-head-left">
       <a href="http://vickywang.design/" class="pointer"> VICKY WANG
       </a>
       <p class="lighter_font" id="topleftlighterfont"> DESIGN & RESEARCH
       </p>
     </div>
-    <div class="container_right">
+    <div class="container-head-right">
       <div> <a href="/design" class="inactive"> DESIGN </a>
       </div>
       <div> <a href="/architecture" class="inactive"> ARCHITECTURE </a>
@@ -29,46 +29,227 @@
   </div>
   <!--head-->
 
-  <!--body_intro-->
-  <div class="container-about">
-  <div class="container_body">
-    <img src="https://s3-us-west-1.amazonaws.com/vickywang.design/about/me.png" alt="me"
-      id="image-me">
-    <div class="text-about-hi">Hello, I'm Vicky</div>
-    <div class="text-about-intro">
-      A Designer currently working as a freelancer Based San Francisco.</div>
-    <div class="text-about-intro">
-      I've worked on digital products related to design and code.</div>
-  </div>
-  <!--body_intro-->
-  <hr>
 
-  <!--body_experience-->
-  <div class="container_resume">
-  <div class="container_body_about">
-    <div class="text-about-left">EXPERIENCE</div>
-    <div class="text-about-right">
-      <div>Freelancer | Aug. 2019 – current | San Francisco | Product Designer</div>
-      <div>Buro OS | Aug. 2017 – Jul. 2018 | Beijing | Architectural Assistant</div>
+
+  <!--overral_body_intro + resume-->
+  <div class="container-body-about">
+    <div class="blank"></div>
+
+    <!--container_intro + resume-->
+
+    <div class="container-body-intro-column">
+      <!--container-body 1-->
+      <img src="https://s3-us-west-1.amazonaws.com/vickywang.design/about/me.png" alt="me"
+        id="image-me">
+      <div class="text-about-hi"><strong>Hello, I'm Vicky</strong></div>
+      <div class="text-about-intro">
+        A designer currently working as a freelancer based San Francisco.</div>
+      <div class="text-about-intro">
+        I've worked on digital products related to design and code.</div>
     </div>
-    <!--<div class="vertical-line"></div>..!>-->
-  </div>
-  <hr>
+    <!--container_intro-->
+    <hr>
 
-  <div class="container_body_about">
-    <div class="text-about-left">EDUCATION</div>
-    <div class="text-about-right">
-      <div>University of California, Berkeley
-        UC Berkeley | Aug. 2015 – May. 2019 | M. Arch. </div>
-      <div>| Architectural and Building Science/ Technology</div>
+    <div class="container-body-intro-row">
+      <!--container-body 2-->
+
+      <div class="container-body-left">
+        <!--container_left-->
+        <strong class="item-left">EDUCATION</strong>
+      </div>
+      <div class="container-body-right">
+        <div class="item-right">
+          <p class="text-right-title">University of California, Berkeley</p>
+        </div>
+        <div class="item-right">
+          <p class="text-time">Aug. 2015 – May. 2019</p>
+        </div>
+        <div class="item-right">
+          <p class="text-right-description">Master of Architecture and Building Science/Technology
+          </p>
+        </div>
+      </div>
     </div>
-  </div>
-  </div>
-  </div>
+    <hr>
+
+    <div class="container-body-intro-row">
+      <!--container-body 3 experience-->
+
+      <div class="container-body-left">
+        <!--container_left-->
+        <strong class="item-left">EXPERIENCE</strong>
+      </div>
+
+      <div class="container-body-right">
+
+
+        <div class="item-right">
+          <p class="text-right-title">Büro Ole Scheeren </p>
+        </div>
+        <div class="item-right">
+          <p class="text-time">August. 2017 – July. 2018 </p>
+        </div>
+        <div class="container-body-right-insertion">
+          <div class="item-right">
+            <p class="vertical-line"></p>
+          </div>
+          <div class="container-body-right-nomargin">
+            <div class="item-right">
+              <p class="text-right-location">Beijing, China</p>
+            </div>
+            <div class="item-right">
+              <p class="text-right-location">Architectural Assistant </p>
+            </div>
+          </div>
+        </div>
+
+        <div class="item-right">
+          <p class="text-right-title">In Design Studio</p>
+        </div>
+        <div class="item-right">
+          <p class="text-time">May. 2017 – August. 2017</p>
+        </div>
+        <div class="container-body-right-insertion">
+          <div class="item-right">
+            <p class="vertical-line"></p>
+          </div>
+          <div class="container-body-right-nomargin">
+            <div class="item-right">
+              <p class="text-right-location">New York, U.S.</p>
+            </div>
+            <div class="item-right">
+              <p class="text-right-location">Summer Intern </p>
+            </div>
+          </div>
+        </div>
 
 
 
-  <!--foot-->
+        <div class="item-right">
+          <p class="text-right-title">PDI Design Group </p>
+        </div>
+        <div class="item-right">
+          <p class="text-time">August. 2016 – July. 2017</p>
+        </div>
+        <div class="container-body-right-insertion">
+          <div class="item-right">
+            <p class="vertical-line"></p>
+          </div>
+          <div class="container-body-right-nomargin">
+            <div class="item-right">
+              <p class="text-right-location">Beijing, China</p>
+            </div>
+            <div class="item-right">
+              <p class="text-right-location">Architectural Designer </p>
+            </div>
+          </div>
+        </div>
+
+
+
+        <div class="item-right">
+          <p class="text-right-title">Do Union </p>
+        </div>
+        <div class="item-right">
+          <p class="text-time">July. 2010 – May. 2012</p>
+        </div>
+        <div class="container-body-right-insertion">
+          <div class="item-right">
+            <p class="vertical-line"></p>
+          </div>
+          <div class="container-body-right-nomargin">
+            <div class="item-right">
+              <p class="text-right-location">Beijing, China</p>
+            </div>
+            <div class="item-right">
+              <p class="text-right-location">Architectural Intern</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <hr>
+    <div class="container-body-intro-row">
+      <!--container-body 3 SKILLS-->
+
+      <div class="container-body-left">
+        <!--container_left-->
+        <strong class="item-left">SKILL&TOOLS</strong>
+      </div>
+
+      <div class="container-body-right">
+
+
+        <div class="item-right">
+          <p class="text-right-title">UI/UX </p>
+        </div>
+        <div class="container-body-right-nomargin">
+          <p class="text-right-description">Sketch, Adobe XD, Figma
+          </p>
+        </div>
+
+        <div class="item-right">
+          <p class="text-right-title">Programming </p>
+        </div>
+        <div class="container-body-right-nomargin">
+          <p class="text-right-description">HTML, CSS, Javascript, Python
+          </p>
+        </div>
+
+        <div class="item-right">
+          <p class="text-right-title">2D Graphic </p>
+        </div>
+        <div class="container-body-right-nomargin">
+          <p class="text-right-description">Adobe Suite (Illustrator, Photoshop, InDesign), AutoCAD
+          </p>
+        </div>
+
+        <div class="item-right">
+          <p class="text-right-title">3D Modelling and VR
+          </p>
+        </div>
+        <div class="container-body-right-nomargin">
+          <p class="text-right-description">Rhino, Grasshopper, Sketchup, 3Dmax Studio, Unity
+          </p>
+        </div>
+
+        <div class="item-right">
+          <p class="text-right-title">Fabrication
+          </p>
+        </div>
+        <div class="container-body-right-nomargin">
+          <p class="text-right-description">3D Printing, Blade Cutter(Zund S3 Digital), CNC(Techno Isel 3-axis CNC router), Laser Cutter,3D Scanner(NextEngine 3D)
+          </p>
+        </div>
+
+        <div class="item-right">
+          <p class="text-right-title">Research
+          </p>
+        </div>
+        <div class="container-body-right-nomargin">
+          <p class="text-right-description">Affinity Diagramming, Cognitive Mapping, Behavioral Mapping, Competitive Testing, Contextual Inquiry, Survey, Experience Prototyping
+          </p>
+        </div>
+
+        <div class="item-right">
+          <p class="text-right-title">Certificate
+          </p>
+        </div>
+        <div class="container-body-right-nomargin">
+          <p class="text-right-description">LEED Green Associate
+          </p>
+        </div>
+      </div>
+    </div>
+
+    <div class="blank"></div>
+
+
+  </div>
+
+  <!--container_intro + resume-->
+
+  <!--footer-->
   <div class="container_footer">
 
     <div id="infor">
