--- a/architecture/index.html
+++ b/architecture/index.html
@@ -7,16 +7,16 @@
 
 <body>
   <!--head-->
-  <div class="container_head">
+  <div class="container-head">
 
-    <div class="container_left">
+    <div class="container-head-left">
       <a href="http://vickywang.design/" class="pointer"> VICKY WANG
       </a>
       <p class="lighter_font" id="topleftlighterfont"> DESIGN & RESEARCH
       </p>
     </div>
 
-    <div class="container_right">
+    <div class="container-head-right">
       <div> <a href="/design" class="inactive"> DESIGN </a>
       </div>
       <div> <a href="/architecture" class="active"> ARCHITECTURE </a>
