update /about and everything else

--- a/about/index.html
+++ b/about/index.html
@@ -28,12 +28,12 @@
 
   </div>
   <!--head-->
+  <div class="blank-about"></div>
 
 
 
   <!--overral_body_intro + resume-->
   <div class="container-body-about">
-    <div class="blank"></div>
 
     <!--container_intro + resume-->
 
@@ -84,7 +84,7 @@
 
 
         <div class="item-right">
-          <p class="text-right-title">Büro Ole Scheeren </p>
+          <p class="text-right-title">Buro Ole Scheeren </p>
         </div>
         <div class="item-right">
           <p class="text-time">August. 2017 – July. 2018 </p>
@@ -242,12 +242,14 @@
       </div>
     </div>
 
-    <div class="blank"></div>
 
 
   </div>
 
   <!--container_intro + resume-->
+  <div class="blank-about"></div>
+
+
 
   <!--footer-->
   <div class="container_footer">
