--- a/architecture/index.html
+++ b/architecture/index.html
@@ -29,6 +29,7 @@
 
   </div>
   <!--head-->
+  <div class="blank"></div>
 
   <!--body1-->
   <div class="container_body">
@@ -60,9 +61,10 @@
     </div>
   </div>
   <!--body3-->
+  <div class="blank"></div>
 
 
-  <!--foot-->
+  <!--footer-->
   <div class="container_footer">
 
     <div id="infor">
