--- a/photography/index.html
+++ b/photography/index.html
@@ -29,18 +29,23 @@
 
   </div>
   <!--head-->
+
+<div class="blank"></div>
+
 <div class="container_body">
   <!--body1-->
   <div>
     <img
-      src="https://s3-us-west-1.amazonaws.com/vickywang.design/photography/12272019_9.jpg"
-      alt="White Sands National Monument" class="image">
+      class="image-photo"
+      src="https://s3-us-west-1.amazonaws.com/vickywang.design/photography/12272019_6.jpg"
+      alt="White Sands National Monument">
       <div class="image-text">White Sands National Monument</div>
   </div>
   <!--body1-->
   <!--body2-->
   <div>
     <img
+      class="image-photo"
       src="https://s3-us-west-1.amazonaws.com/vickywang.design/photography/12272019_8.jpg"
       alt="White Sands National Monument">
       <div class="image-text">White Sands National Monument</div>
@@ -49,6 +54,7 @@
   <!--body3-->
   <div>
     <img
+      class="image-photo"
       src="https://s3-us-west-1.amazonaws.com/vickywang.design/photography/12272019_7.jpg"
       alt="White Sands National Monument">
       <div class="image-text">White Sands National Monument</div>
@@ -58,14 +64,16 @@
 
   <div>
     <img
-      src="https://s3-us-west-1.amazonaws.com/vickywang.design/photography/12272019_6.jpg"
+      class="image-photo"
+      src="https://s3-us-west-1.amazonaws.com/vickywang.design/photography/12272019_9.jpg"
       alt="White Sands National Monument">
       <div class="image-text">White Sands National Monument</div>
   </div>
   <!--body4-->
 </div>
+<div class="blank"></div>
 
-  <!--foot-->
+  <!--footer-->
   <div class="container_footer">
 
     <div id="infor">
