--- a/architecture/recreation_commons/index.html
+++ b/architecture/recreation_commons/index.html
@@ -7,15 +7,15 @@
 
 <body class="style">
   <!--head-->
-  <div class="container_head">
+  <div class="container-head">
 
-    <div class="container_left">
+    <div class="container-head-left">
       <a href="http://vickywang.design/" class="pointer"> VICKY WANG
       </a>
       <p class="lighter_font" id="topleftlighterfont"> DESIGN & RESEARCH
       </p>
     </div>
-    <div class="container_right">
+    <div class="container-head-right">
       <div> <a href="/design"> DESIGN </a>
       </div>
       <div> <a href="/architecture"> ARCHITECTURE </a>
@@ -28,6 +28,7 @@
 
   </div>
   <!--head-->
+  <div class="blank"></div>
 
   <!--body1-->
   <div class="container_body">
@@ -65,6 +66,7 @@
   </div>
   <!--body4-->
 
+  <div class="blank"></div>
 
   <!--foot-->
   <div class="container_footer">
