--- a/design/index.html
+++ b/design/index.html
@@ -28,6 +28,7 @@
 
   </div>
   <!--head-->
+  <div class="blank"></div>
 
   <!--body1-->
   <div class="container_body">
@@ -64,9 +65,10 @@
       <div class="image-text">STREET VIEW</div>
   </div>
   <!--body4-->
+  <div class="blank"></div>
 
 
-  <!--foot-->
+  <!--footer-->
   <div class="container_footer">
 
     <div id="infor">
