--- a/about/index.html
+++ b/about/index.html
@@ -43,7 +43,9 @@
         id="image-me">
       <div class="text-about-hi"><strong>Hello, I'm Vicky</strong></div>
       <div class="text-about-intro">
-        A designer currently working as a freelancer based San Francisco.</div>
+        Currently working as a freelancer based San Francisco. </div>
+      <div class="text-about-intro">
+        I am a designer who loves solving challenging problems. </div>
       <div class="text-about-intro">
         I've worked on digital products related to design and code.</div>
     </div>
@@ -55,7 +57,7 @@
 
       <div class="container-body-left">
         <!--container_left-->
-        <strong class="item-left">EDUCATION</strong>
+        <strong class="text-left-title">EDUCATION</strong>
       </div>
       <div class="container-body-right">
         <div class="item-right">
@@ -77,7 +79,7 @@
 
       <div class="container-body-left">
         <!--container_left-->
-        <strong class="item-left">EXPERIENCE</strong>
+        <strong class="text-left-title">EXPERIENCE</strong>
       </div>
 
       <div class="container-body-right">
@@ -174,7 +176,7 @@
 
       <div class="container-body-left">
         <!--container_left-->
-        <strong class="item-left">SKILL&TOOLS</strong>
+        <strong class="text-left-title">SKILL&TOOLS</strong>
       </div>
 
       <div class="container-body-right">
@@ -218,7 +220,8 @@
           </p>
         </div>
         <div class="container-body-right-nomargin">
-          <p class="text-right-description">3D Printing, Blade Cutter(Zund S3 Digital), CNC(Techno Isel 3-axis CNC router), Laser Cutter,3D Scanner(NextEngine 3D)
+          <p class="text-right-description">3D Printing, Blade Cutter(Zund S3 Digital), CNC(Techno
+            Isel 3-axis CNC router), Laser Cutter,3D Scanner(NextEngine 3D)
           </p>
         </div>
 
@@ -227,7 +230,8 @@
           </p>
         </div>
         <div class="container-body-right-nomargin">
-          <p class="text-right-description">Affinity Diagramming, Cognitive Mapping, Behavioral Mapping, Competitive Testing, Contextual Inquiry, Survey, Experience Prototyping
+          <p class="text-right-description">Affinity Diagramming, Cognitive Mapping, Behavioral
+            Mapping, Competitive Testing, Contextual Inquiry, Survey, Experience Prototyping
           </p>
         </div>
 
@@ -247,7 +251,7 @@
   </div>
 
   <!--container_intro + resume-->
-  <div class="blank-about"></div>
+  <div class="blank-thicker"></div>
 
 
 
@@ -271,16 +275,16 @@
       </div>
 
       <div>
-        <a href="https://medium.com/@vickywang.design">
+        <a href="https://github.com/vicky-wyq">
           <img class="image_footer"
-            src="https://s3-us-west-1.amazonaws.com/vickywang.design/Icons_medium.svg" alt="medium">
+            src="https://s3-us-west-1.amazonaws.com/vickywang.design/Icons_github.svg" alt="github">
         </a>
       </div>
 
       <div>
-        <a href="https://github.com/vicky-wyq">
+        <a href="https://medium.com/@vickywang.design">
           <img class="image_footer"
-            src="https://s3-us-west-1.amazonaws.com/vickywang.design/Icons_github.svg" alt="github">
+            src="https://s3-us-west-1.amazonaws.com/vickywang.design/Icons_medium.svg" alt="medium">
         </a>
       </div>
     </div>
