--- a/architecture/index.html
+++ b/architecture/index.html
@@ -26,67 +26,178 @@
       <div> <a href="/about" class="inactive"> ABOUT </a>
       </div>
     </div>
-
   </div>
   <!--head-->
   <div class="blank"></div>
 
   <!--body1-->
   <div class="container_body">
-    <img src="https://s3-us-west-1.amazonaws.com/vickywang.design/architecture/RC_Diagram.svg" alt="RECREATION COMMONS"
-      class="image-hover" id="image-rc">
+    <img src="https://s3-us-west-1.amazonaws.com/vickywang.design/architecture/RC_Diagram.svg"
+      alt="RECREATION COMMONS" class="image-hover" id="image-rc">
 
     <div class="image-text-hover">
-      <div><a href="/architecture/recreation_commons">RECREATION COMMONS</div>
+      <div><a href="/architecture/recreation_commons">RECREATION COMMONS></a></div>
     </div>
   </div>
+  <div>
+    <div class="container-body-description">
+      <p class="text-body-title">Integrated Design Studio ARCH 203, Fall 2018</p>
+      <p class="text-body-description">M. Arch, CED, UC Berkeley</p>
+      <p class="text-body-description"> Instructor: Roddy Creedon</p>
+      <p class="text-body-description">Site: 110 Franklin St. San Francisco, CA, U.S. 94102</p>
+      <p class="text-body-description"> Total Floor Area: 22900 s.f. 4 Floors</p>
+    </div>
+
+  </div>
   <!--body1-->
+  <hr>
   <!--body2-->
   <div class="container_body">
-    <img src="https://s3-us-west-1.amazonaws.com/vickywang.design/architecture/NS_Render.jpg" alt="RECREATION COMMONS"
-      class="image-hover">
+    <img src="https://s3-us-west-1.amazonaws.com/vickywang.design/architecture/NS_Render.jpg"
+      alt="RECREATION COMMONS" class="image-hover">
 
     <div class="image-text-hover">
       <div>NARROW STRIPES</div>
     </div>
   </div>
+  <div>
+    <div class="container-body-description">
+      <p class="text-body-title">Competition, HYDE PARK LIBRARY LONDON, Fall 2017</p>
+      <p class="text-body-description">Site: Location: Hyde Park, London</p>
+      <p class="text-body-description">7500 square metres approx.</p>
+      <p class="text-body-description">Maximum Built Area: 4000 square metres</p>
+      <p class="text-body-description"> (i.e. Maximum Cumulative floor area for all the floors)</p>
+    </div>
+  </div>
   <!--body2-->
+  <hr>
+
   <!--body3-->
   <div class="container_body">
-    <img src="https://s3-us-west-1.amazonaws.com/vickywang.design/architecture/MG_Diagram.jpg" alt="MANIFOLD GROUND"
-      class="image-hover">
+    <img src="https://s3-us-west-1.amazonaws.com/vickywang.design/architecture/MG_Diagram.jpg"
+      alt="MANIFOLD GROUND" class="image-hover">
 
     <div class="image-text-hover">
       <div>MANIFOLD GROUND</div>
     </div>
   </div>
+  <div>
+    <div class="container-body-description">
+      <p class="text-body-title">[IN]ARCH ADV, Summer 2014</p>
+      <p class="text-body-description">Summer Program, CED, UC Berkeley</p>
+      <p class="text-body-description">Instructor: Keith Plymale</p>
+      <p class="text-body-description">Site: 450 Hayes St. San Francisco, CA 94102</p>
+    </div>
+  </div>
   <!--body3-->
-  <div class="blank"></div>
+  <hr>
+
+  <!--body4-->
+  <div class="container_body">
+    <img src="https://s3-us-west-1.amazonaws.com/vickywang.design/architecture/recovery_of_river_edges/recovery+of+river+edges.jpg"
+      alt="RECOVERY OF RIVER EDGES" class="image-hover">
+
+    <div class="image-text-hover">
+      <div>RECOVERY OF RIVER EDGES</div>
+    </div>
+  </div>
+  <div>
+    <div class="container-body-description">
+      <p class="text-body-title">Introduction to Architecture Studio 2, Spring 2016</p>
+      <p class="text-body-description">M. Arch, CED, UC Berkeley</p>
+      <p class="text-body-description">Instructor: Jay Atherton</p>
+      <p class="text-body-description">Site: Sunnynook River Park, 2901 Glendale Blvd, Los Angeles,
+        CA 90039</p>
+      <p class="text-body-description">Program Area: Indoor/outdoor community space for performances
+        3000 sq.ft.
+      </p>
+    </div>
+  </div>
+  <!--body4-->
+  <hr>
+
+  <!--body5-->
+  <div class="container_body">
+    <img src="https://s3-us-west-1.amazonaws.com/vickywang.design/architecture/the_rotation_curves/Rotation+Curves.svg"
+      alt="THE ROTATION CURVES" class="image-hover" id="image-rotation-curve">
+
+    <div class="image-text-hover">
+      <div>THE ROTATION CURVES</div>
+    </div>
+  </div>
+  <div>
+    <div class="container-body-description">
+      <p class="text-body-title">Introduction to Architecture Studio 1, Fall 2015</p>
+      <p class="text-body-description">M. Arch, CED, UC Berkeley</p>
+      <p class="text-body-description"> Instructor: Rudabeh Pakravan</p>
+      <p class="text-body-description">Part i Floating Island</p>
+      <p class="text-body-description">Part ii Foam</p>
+      <p class="text-body-description">Part iii House</p>
+
+    </div>
+  </div>
+  <!--body5-->
+  <hr>
+
+  <!--body6-->
+  <div class="container_body">
+    <img src="https://s3-us-west-1.amazonaws.com/vickywang.design/architecture/MG_Diagram.jpg"
+      alt="OTHER ACADEMIC WORKS" class="image-hover">
+
+    <div class="image-text-hover">
+      <div>OTHER ACADEMIC WORKS</div>
+    </div>
+  </div>
+  <div>
+    <div class="container-body-description">
+      <p class="text-body-title">OTHER ACADEMIC WORKS</p>
+      <p class="text-body-description">LACMA 2016</p>
+      <p class="text-body-description"> 798 Exhibition Gallery 2010</p>
+      <p class="text-body-description">The Renovation of a Factory Building 2013</p>
+      <p class="text-body-description"> Mountain Residential House 2012</p>
+    </div>
+  </div>
+  <!--body6-->
+
+
+  <div class="blank-thicker"></div>
+
 
 
   <!--footer-->
   <div class="container_footer">
 
     <div id="infor">
-      <div> <a href="mailto:vickyw.design@gmail.com"><img class="image_footer"
-            src="https://s3-us-west-1.amazonaws.com/vickywang.design/Icons_mail.svg" alt="email"></a>
+      <div>
+        <a href="mailto:vickyw.design@gmail.com">
+          <img class="image_footer"
+            src="https://s3-us-west-1.amazonaws.com/vickywang.design/Icons_mail.svg" alt="email">
+        </a>
 
       </div>
-      <div> <a href="https://www.linkedin.com/in/vicky-wang-6ab7487b"><img class="image_footer"
-            src="https://s3-us-west-1.amazonaws.com/vickywang.design/Icons_linkedin.svg" alt="linkedin" width="50"
-            height="50">
-        </a> </div>
-
-      <div> <a href="https://medium.com/@vickywang.design"><img class="image_footer"
-            src="https://s3-us-west-1.amazonaws.com/vickywang.design/Icons_medium.svg" alt="medium" width="50"
-            height="50"> </a>
+      <div>
+        <a href="https://www.linkedin.com/in/vicky-wang-6ab7487b">
+          <img class="image_footer"
+            src="https://s3-us-west-1.amazonaws.com/vickywang.design/Icons_linkedin.svg"
+            alt="linkedin">
+        </a>
       </div>
 
-      <div> <a href="https://github.com/vicky-wyq"><img class="image_footer"
-            src="https://s3-us-west-1.amazonaws.com/vickywang.design/Icons_github.svg" alt="github" width="50"
-            height="50"> </a>
+      <div>
+        <a href="https://github.com/vicky-wyq">
+          <img class="image_footer"
+            src="https://s3-us-west-1.amazonaws.com/vickywang.design/Icons_github.svg" alt="github">
+        </a>
+      </div>
+
+      <div>
+        <a href="https://medium.com/@vickywang.design">
+          <img class="image_footer"
+            src="https://s3-us-west-1.amazonaws.com/vickywang.design/Icons_medium.svg" alt="medium">
+        </a>
       </div>
     </div>
+
     <p class="lighter_font">COPYRIGHT© VICKY WANG
     </p>
 
