--- a/index.html
+++ b/index.html
@@ -1,7 +1,63 @@
 <html>
 
 <head>
-  <link rel="stylesheet" href="main.css">
+  <link rel="stylesheet" href="main.css" />
+
+  <meta property='og:title' content='Vicky Wang' />
+  <meta property='og:image' content='https://s3-us-west-1.amazonaws.com/vickywang.design/architecture/NS_Render.jpg' />
+  <meta property='og:description' content='Hi! Thanks for stopping by. 
+    I’m currently a Freelancer Designer based in San Francisco. 
+    I enjoy design and code who loves solving challenging problems. 
+    Interested in what you see? Shoot me an email :)' />
+  <meta property='og:url' content='//vickywang.design' />
+
+
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+
+  <meta charset="utf-8">
+  <title>VICKY WANG</title>
+
+  <link rel="shortcut icon" href="https://s3-us-west-1.amazonaws.com/vickywang.design/favicon.ico">
+
+  <link rel="canonical" href="https://vickywang.com">
+
+  <meta property="og:site_name" content="VICKY WANG">
+  <meta property="og:title" content="VICKY WANG">
+  <meta property="og:url" content="https://vickywang.design">
+  <meta property="og:type" content="website">
+  <meta property="og:description" content="Hi! Thanks for stopping by. 
+  I’m currently a Freelancer Designer based in San Francisco. 
+  I enjoy design and code who loves solving challenging problems. 
+  Interested in what you see? Shoot me an email :) ">
+  <meta property="og:image" content="https://s3-us-west-1.amazonaws.com/vickywang.design/architecture/NS_Render.jpg">
+  <meta property="og:image:width" content="1900">
+  <meta property="og:image:height" content="1500">
+
+  <meta itemprop="name" content="VICKY WANG">
+  <meta itemprop="url" content="https://vickywang.design">
+
+  <meta itemprop="description" content="Hi! Thanks for stopping by. 
+  I’m currently a Freelancer Designer based in San Francisco. 
+  I enjoy design and code who loves solving challenging problems. 
+  Interested in what you see? Shoot me an email :) ">
+  <meta itemprop="thumbnailUrl" content="https://s3-us-west-1.amazonaws.com/vickywang.design/architecture/NS_Render.jpg">
+
+
+
+  <meta name="twitter:title" content="VICKY WANG">
+  <meta name="twitter:image" content="https://s3-us-west-1.amazonaws.com/vickywang.design/architecture/NS_Render.jpg">
+  <meta name="twitter:url" content="https://vickywang.design">
+  <meta name="twitter:card" content="summary">
+  <meta name="twitter:description" content="Hi! Thanks for stopping by. 
+  I’m currently a Freelancer Designer based in San Francisco. 
+  I enjoy design and code who loves solving challenging problems. 
+  Interested in what you see? Shoot me an email :) ">
+  <meta name="description" content="">
+
+
+
+
 </head>
 
 <body>
@@ -31,8 +87,8 @@
 
   <!--body-->
   <div class="container_body">
-    <img src="https://s3-us-west-1.amazonaws.com/vickywang.design/kappe_house.jpg" alt="DRAWING OF KAPPE RAY HOUSE"
-      class="image-hover">
+    <img src="https://s3-us-west-1.amazonaws.com/vickywang.design/kappe_house.jpg"
+      alt="DRAWING OF KAPPE RAY HOUSE" class="image-hover">
 
     <div class="image-text-hover">
       <div class="text">DRAWING OF KAPPE RAY HOUSE</div>
@@ -42,29 +98,39 @@
 
   <!--footer-->
   <div class="container_footer">
+
     <div id="infor">
-      <div> <a href="mailto:vickyw.design@gmail.com">
-          <img class="image_footer" src="https://s3-us-west-1.amazonaws.com/vickywang.design/Icons_mail.svg"
-            alt="email"></a>
+      <div>
+        <a href="mailto:vickyw.design@gmail.com">
+          <img class="image_footer"
+            src="https://s3-us-west-1.amazonaws.com/vickywang.design/Icons_mail.svg" alt="email">
+        </a>
 
       </div>
-      <div> <a href="https://www.linkedin.com/in/vicky-wang-6ab7487b">
-          <img class="image_footer" src="https://s3-us-west-1.amazonaws.com/vickywang.design/Icons_linkedin.svg"
-            alt="linkedin" width="50" height="50">
-        </a> </div>
-
-      <div> <a href="https://medium.com/@vickywang.design">
-          <img class="image_footer" src="https://s3-us-west-1.amazonaws.com/vickywang.design/Icons_medium.svg"
-            alt="medium" width="50" height="50"> </a>
+      <div>
+        <a href="https://www.linkedin.com/in/vicky-wang-6ab7487b">
+          <img class="image_footer"
+            src="https://s3-us-west-1.amazonaws.com/vickywang.design/Icons_linkedin.svg"
+            alt="linkedin">
+        </a>
       </div>
 
-      <div> <a href="https://github.com/vicky-wyq">
-          <img class="image_footer" src="https://s3-us-west-1.amazonaws.com/vickywang.design/Icons_github.svg"
-            alt="github" width="50" height="50"> </a>
+      <div>
+        <a href="https://github.com/vicky-wyq">
+          <img class="image_footer"
+            src="https://s3-us-west-1.amazonaws.com/vickywang.design/Icons_github.svg" alt="github">
+        </a>
+      </div>
+
+      <div>
+        <a href="https://medium.com/@vickywang.design">
+          <img class="image_footer"
+            src="https://s3-us-west-1.amazonaws.com/vickywang.design/Icons_medium.svg" alt="medium">
+        </a>
       </div>
     </div>
 
-    <p class="lighter_font"> ©COPYRIGHT VICKY WANG
+    <p class="lighter_font">COPYRIGHT© VICKY WANG
     </p>
 
   </div>
