--- a/photography/index.html
+++ b/photography/index.html
@@ -30,77 +30,276 @@
   </div>
   <!--head-->
 
-<div class="blank"></div>
 
-<div class="container_body">
-  <!--body1-->
-  <div>
-    <img
-      class="image-photo"
-      src="https://s3-us-west-1.amazonaws.com/vickywang.design/photography/12272019_6.jpg"
-      alt="White Sands National Monument">
-      <div class="image-text">White Sands National Monument</div>
-  </div>
-  <!--body1-->
-  <!--body2-->
-  <div>
-    <img
-      class="image-photo"
-      src="https://s3-us-west-1.amazonaws.com/vickywang.design/photography/12272019_8.jpg"
-      alt="White Sands National Monument">
-      <div class="image-text">White Sands National Monument</div>
-  </div>
-  <!--body2-->
-  <!--body3-->
-  <div>
-    <img
-      class="image-photo"
-      src="https://s3-us-west-1.amazonaws.com/vickywang.design/photography/12272019_7.jpg"
-      alt="White Sands National Monument">
-      <div class="image-text">White Sands National Monument</div>
-  </div>
-  <!--body3-->
-  <!--body4-->
+  <div class="blank"></div>
 
-  <div>
-    <img
-      class="image-photo"
-      src="https://s3-us-west-1.amazonaws.com/vickywang.design/photography/12272019_9.jpg"
-      alt="White Sands National Monument">
-      <div class="image-text">White Sands National Monument</div>
+  <div class="container_body">
+    <img src="https://s3-us-west-1.amazonaws.com/vickywang.design/photography/09182020_1.jpg"
+      alt="Yellowstone National Park">
   </div>
-  <!--body4-->
-</div>
-<div class="blank"></div>
+  <div>
+    <div class="container-body-description">
+      <p class="text-body-title">Yellowstone National Park</p>
+      <p class="text-body-description"> September, 2020</p>
+    </div>
+  </div>
+
+  <hr>
+
+  <div class="container_body">
+    <img src="https://s3-us-west-1.amazonaws.com/vickywang.design/photography/12272019.jpg"
+      alt="Bosque Del Apache National Wildlife Refuge">
+  </div>
+  <div>
+    <div class="container-body-description">
+      <p class="text-body-title">Bosque Del Apache National Wildlife Refuge</p>
+      <p class="text-body-description"> December, 2019</p>
+    </div>
+  </div>
+
+  <hr>
+
+  <div class="container_body">
+    <img src="https://s3-us-west-1.amazonaws.com/vickywang.design/photography/12272019_1.jpg"
+      alt="Bosque Del Apache National Wildlife Refuge">
+  </div>
+  <div>
+    <div class="container-body-description">
+      <p class="text-body-title">Bosque Del Apache National Wildlife Refuge</p>
+      <p class="text-body-description"> December, 2019</p>
+    </div>
+  </div>
+
+
+  <hr>
+
+  <div class="container_body">
+    <img src="https://s3-us-west-1.amazonaws.com/vickywang.design/photography/09152020.jpg"
+      alt="Teton National Park">
+  </div>
+  <div>
+    <div class="container-body-description">
+      <p class="text-body-title">Teton National Park</p>
+      <p class="text-body-description"> September, 2020</p>
+    </div>
+  </div>
+
+  <hr>
+
+  <div class="container_body">
+    <img src="https://s3-us-west-1.amazonaws.com/vickywang.design/photography/09152020_1.jpg"
+      alt="Teton National Park">
+  </div>
+  <div>
+    <div class="container-body-description">
+      <p class="text-body-title">Teton National Park</p>
+      <p class="text-body-description"> September, 2020</p>
+    </div>
+  </div>
+
+  <hr>
+
+  <div class="container_body">
+    <img src="https://s3-us-west-1.amazonaws.com/vickywang.design/photography/12272019_3.jpg"
+      alt="White Sands National Monument">
+  </div>
+  <div>
+    <div class="container-body-description">
+      <p class="text-body-title">White Sands National Monument</p>
+      <p class="text-body-description"> December, 2019</p>
+    </div>
+  </div>
+
+  <hr>
+
+  <div class="container_body">
+    <img src="https://s3-us-west-1.amazonaws.com/vickywang.design/photography/12272019_4.jpg"
+      alt="White Sands National Monument">
+  </div>
+  <div>
+    <div class="container-body-description">
+      <p class="text-body-title">White Sands National Monument</p>
+      <p class="text-body-description"> December, 2019</p>
+    </div>
+  </div>
+
+  <hr>
+
+  <div class="container_body">
+    <img src="https://s3-us-west-1.amazonaws.com/vickywang.design/photography/12272019_9.jpg"
+      alt="White Sands National Monument">
+  </div>
+  <div>
+    <div class="container-body-description">
+      <p class="text-body-title">White Sands National Monument</p>
+      <p class="text-body-description"> December, 2019</p>
+    </div>
+  </div>
+
+  <hr>
+
+  <div class="container_body">
+    <img src="https://s3-us-west-1.amazonaws.com/vickywang.design/photography/12272019_5.jpg"
+      alt="White Sands National Monument">
+  </div>
+  <div>
+    <div class="container-body-description">
+      <p class="text-body-title">White Sands National Monument</p>
+      <p class="text-body-description"> December, 2019</p>
+    </div>
+  </div>
+
+  <hr>
+
+  <div class="container_body">
+    <img src="https://s3-us-west-1.amazonaws.com/vickywang.design/photography/12272019_6.jpg"
+      alt="White Sands National Monument">
+  </div>
+  <div>
+    <div class="container-body-description">
+      <p class="text-body-title">White Sands National Monument</p>
+      <p class="text-body-description"> December, 2019</p>
+    </div>
+  </div>
+
+  <hr>
+
+  <div class="container_body">
+    <img src="https://s3-us-west-1.amazonaws.com/vickywang.design/photography/12272019_7.jpg"
+      alt="White Sands National Monument">
+  </div>
+  <div>
+    <div class="container-body-description">
+      <p class="text-body-title">White Sands National Monument</p>
+      <p class="text-body-description"> December, 2019</p>
+    </div>
+  </div>
+
+  <hr>
+
+
+  <div class="container_body">
+    <img src="https://s3-us-west-1.amazonaws.com/vickywang.design/photography/12272019_8.jpg"
+      alt="White Sands National Monument">
+  </div>
+  <div>
+    <div class="container-body-description">
+      <p class="text-body-title">White Sands National Monument</p>
+      <p class="text-body-description"> December, 2019</p>
+    </div>
+  </div>
+
+  <hr>
+
+  <div class="container_body">
+    <img src="https://s3-us-west-1.amazonaws.com/vickywang.design/photography/12282019.jpg"
+      alt="White Sands National Monument">
+  </div>
+  <div>
+    <div class="container-body-description">
+      <p class="text-body-title">Taos Pueblo</p>
+      <p class="text-body-description"> December, 2019</p>
+    </div>
+  </div>
+
+  <hr>
+
+  <div class="container_body">
+    <img src="https://s3-us-west-1.amazonaws.com/vickywang.design/photography/01032020_2.jpg"
+      alt="Sacramento National Wildlife Refuge">
+
+  </div>
+  <div>
+    <div class="container-body-description">
+      <p class="text-body-title">Sacramento National Wildlife Refuge</p>
+      <p class="text-body-description"> December, 2019</p>
+    </div>
+  </div>
+
+  <hr>
+
+  <div class="container_body">
+    <img src="https://s3-us-west-1.amazonaws.com/vickywang.design/photography/01032020_1.jpg"
+      alt="Sacramento National Wildlife Refuge">
+  </div>
+  <div>
+    <div class="container-body-description">
+      <p class="text-body-title">Sacramento National Wildlife Refuge</p>
+      <p class="text-body-description"> December, 2019</p>
+    </div>
+  </div>
+
+  <hr>
+
+  <div class="container_body">
+    <img src="https://s3-us-west-1.amazonaws.com/vickywang.design/photography/01032020_2.jpg"
+      alt="Sacramento National Wildlife Refuge">
+
+  </div>
+  <div>
+    <div class="container-body-description">
+      <p class="text-body-title">Sacramento National Wildlife Refuge</p>
+      <p class="text-body-description"> December, 2019</p>
+    </div>
+  </div>
+  
+  <hr>
+
+  <div class="container_body">
+    <img src="https://s3-us-west-1.amazonaws.com/vickywang.design/photography/01032020.jpg"
+      alt="Sacramento National Wildlife Refuge">
+  </div>
+  <div>
+    <div class="container-body-description">
+      <p class="text-body-title">Sacramento National Wildlife Refuge</p>
+      <p class="text-body-description"> December, 2019</p>
+    </div>
+  </div>
+
+  <div class="blank-thicker"></div>
+
 
   <!--footer-->
   <div class="container_footer">
+    <div class="container_footer">
 
-    <div id="infor">
-      <div> <a href="mailto:vickyw.design@gmail.com"><img class="image_footer"
-            src="https://s3-us-west-1.amazonaws.com/vickywang.design/Icons_mail.svg" alt="email"></a>
+      <div id="infor">
+        <div>
+          <a href="mailto:vickyw.design@gmail.com">
+            <img class="image_footer"
+              src="https://s3-us-west-1.amazonaws.com/vickywang.design/Icons_mail.svg" alt="email">
+          </a>
 
+        </div>
+        <div>
+          <a href="https://www.linkedin.com/in/vicky-wang-6ab7487b">
+            <img class="image_footer"
+              src="https://s3-us-west-1.amazonaws.com/vickywang.design/Icons_linkedin.svg"
+              alt="linkedin">
+          </a>
+        </div>
+
+        <div>
+          <a href="https://github.com/vicky-wyq">
+            <img class="image_footer"
+              src="https://s3-us-west-1.amazonaws.com/vickywang.design/Icons_github.svg"
+              alt="github">
+          </a>
+        </div>
+
+        <div>
+          <a href="https://medium.com/@vickywang.design">
+            <img class="image_footer"
+              src="https://s3-us-west-1.amazonaws.com/vickywang.design/Icons_medium.svg"
+              alt="medium">
+          </a>
+        </div>
       </div>
-      <div> <a href="https://www.linkedin.com/in/vicky-wang-6ab7487b"><img class="image_footer"
-            src="https://s3-us-west-1.amazonaws.com/vickywang.design/Icons_linkedin.svg" alt="linkedin" width="50"
-            height="50">
-        </a> </div>
 
-      <div> <a href="https://medium.com/@vickywang.design"><img class="image_footer"
-            src="https://s3-us-west-1.amazonaws.com/vickywang.design/Icons_medium.svg" alt="medium" width="50"
-            height="50"> </a>
-      </div>
+      <p class="lighter_font">COPYRIGHT© VICKY WANG
+      </p>
 
-      <div> <a href="https://github.com/vicky-wyq"><img class="image_footer"
-            src="https://s3-us-west-1.amazonaws.com/vickywang.design/Icons_github.svg" alt="github" width="50"
-            height="50"> </a>
-      </div>
     </div>
-
-    <p class="lighter_font">COPYRIGHT© VICKY WANG
-    </p>
-
-  </div>
 </body>
 
 </html>
