updated media queries

--- a/about/index.html
+++ b/about/index.html
@@ -7,7 +7,7 @@
 
 <body>
   <!--head-->
-  <div class="container-head">
+  <div class="container-head"id="topbar">
 
     <div class="container-head-left">
       <a href="http://vickywang.design/" class="pointer"> VICKY WANG
@@ -15,7 +15,7 @@
       <p class="lighter_font" id="topleftlighterfont"> DESIGN & RESEARCH
       </p>
     </div>
-    <div class="container-head-right">
+    <div class="container-head-right" id="topbar-right">
       <div> <a href="/design" class="inactive"> DESIGN </a>
       </div>
       <div> <a href="/architecture" class="inactive"> ARCHITECTURE </a>
@@ -43,7 +43,7 @@
         id="image-me">
       <div class="text-about-hi"><strong>Hello, I'm Vicky</strong></div>
       <div class="text-about-intro">
-        Currently working as a freelancer based San Francisco. </div>
+        Currently working as a freelancer based in San Francisco. </div>
       <div class="text-about-intro">
         I am a designer who loves solving challenging problems. </div>
       <div class="text-about-intro">
@@ -64,7 +64,7 @@
           <p class="text-right-title">University of California, Berkeley</p>
         </div>
         <div class="item-right">
-          <p class="text-time">Aug. 2015 – May. 2019</p>
+          <p class="text-time">Aug. 2015 - May. 2019</p>
         </div>
         <div class="item-right">
           <p class="text-right-description">Master of Architecture and Building Science/Technology
@@ -89,7 +89,7 @@
           <p class="text-right-title">Buro Ole Scheeren </p>
         </div>
         <div class="item-right">
-          <p class="text-time">August. 2017 – July. 2018 </p>
+          <p class="text-time">August. 2017 - July. 2018 </p>
         </div>
         <div class="container-body-right-insertion">
           <div class="item-right">
@@ -109,7 +109,7 @@
           <p class="text-right-title">In Design Studio</p>
         </div>
         <div class="item-right">
-          <p class="text-time">May. 2017 – August. 2017</p>
+          <p class="text-time">May. 2017 - August. 2017</p>
         </div>
         <div class="container-body-right-insertion">
           <div class="item-right">
@@ -131,7 +131,7 @@
           <p class="text-right-title">PDI Design Group </p>
         </div>
         <div class="item-right">
-          <p class="text-time">August. 2016 – July. 2017</p>
+          <p class="text-time">August. 2016 - July. 2017</p>
         </div>
         <div class="container-body-right-insertion">
           <div class="item-right">
@@ -153,7 +153,7 @@
           <p class="text-right-title">Do Union </p>
         </div>
         <div class="item-right">
-          <p class="text-time">July. 2010 – May. 2012</p>
+          <p class="text-time">July. 2010 - May. 2012</p>
         </div>
         <div class="container-body-right-insertion">
           <div class="item-right">
@@ -220,8 +220,8 @@
           </p>
         </div>
         <div class="container-body-right-nomargin">
-          <p class="text-right-description">3D Printing, Blade Cutter(Zund S3 Digital), CNC(Techno
-            Isel 3-axis CNC router), Laser Cutter,3D Scanner(NextEngine 3D)
+          <p class="text-right-description">3D Printing, Blade Cutter (Zund S3 Digital), CNC (Techno
+            Isel 3-axis CNC router), Laser Cutter,3D Scanner (NextEngine 3D)
           </p>
         </div>
 
@@ -240,7 +240,7 @@
           </p>
         </div>
         <div class="container-body-right-nomargin">
-          <p class="text-right-description">LEED Green Associate
+          <p class="text-right-description">LEED Green Associate (id:11321289)
           </p>
         </div>
       </div>
