--- a/design/index.html
+++ b/design/index.html
@@ -7,7 +7,7 @@
 
 <body class="style">
   <!--head-->
-  <div class="container-head">
+  <div class="container-head"id="topbar">
 
     <div class="container-head-left">
       <a href="http://vickywang.design/" class="pointer"> VICKY WANG
@@ -15,7 +15,7 @@
       <p class="lighter_font" id="topleftlighterfont"> DESIGN & RESEARCH
       </p>
     </div>
-    <div class="container-head-right">
+    <div class="container-head-right" id="topbar-right">
       <div> <a href="/design" class="active"> DESIGN </a>
       </div>
       <div> <a href="/architecture"class="inactive"> ARCHITECTURE </a>
