--- a/photography/index.html
+++ b/photography/index.html
@@ -7,7 +7,7 @@
 
 <body>
   <!--head-->
-  <div class="container-head">
+  <div class="container-head"id="topbar">
 
     <div class="container-head-left">
       <a href="http://vickywang.design/" class="pointer"> VICKY WANG
@@ -16,7 +16,7 @@
       </p>
     </div>
 
-    <div class="container-head-right">
+    <div class="container-head-right" id="topbar-right">
       <div> <a href="/design" class="inactive"> DESIGN </a>
       </div>
       <div> <a href="/architecture" class="inactive"> ARCHITECTURE </a>
