--- a/index.html
+++ b/index.html
@@ -2,67 +2,41 @@
 
 <head>
   <link rel="stylesheet" href="main.css" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <meta property='og:title' content='Vicky Wang' />
-  <meta property='og:image' content='https://s3-us-west-1.amazonaws.com/vickywang.design/architecture/NS_Render.jpg' />
-  <meta property='og:description' content='Hi! Thanks for stopping by. 
-    I’m currently a Freelancer Designer based in San Francisco. 
-    I enjoy design and code who loves solving challenging problems. 
-    Interested in what you see? Shoot me an email :)' />
-  <meta property='og:url' content='//vickywang.design' />
-
-
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-
-  <meta charset="utf-8">
-  <title>VICKY WANG</title>
-
-  <link rel="shortcut icon" href="https://s3-us-west-1.amazonaws.com/vickywang.design/favicon.ico">
-
-  <link rel="canonical" href="https://vickywang.com">
-
+  <title>Vicky Wang</title>
   <meta property="og:site_name" content="VICKY WANG">
-  <meta property="og:title" content="VICKY WANG">
-  <meta property="og:url" content="https://vickywang.design">
-  <meta property="og:type" content="website">
+  
+  <meta property="og:url" content="http://vickywang.design" />
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="VICKY WANG" />
   <meta property="og:description" content="Hi! Thanks for stopping by. 
-  I’m currently a Freelancer Designer based in San Francisco. 
   I enjoy design and code who loves solving challenging problems. 
-  Interested in what you see? Shoot me an email :) ">
-  <meta property="og:image" content="https://s3-us-west-1.amazonaws.com/vickywang.design/architecture/NS_Render.jpg">
-  <meta property="og:image:width" content="1900">
-  <meta property="og:image:height" content="1500">
+  Interested in what you see? Shoot me an email :) " />
+  <meta property="og:image" content="https://s3-us-west-1.amazonaws.com/vickywang.design/VW.png" />
+  <meta property="og:image:type" content="image/png">
+  <meta property="og:image:width" content="750">
+  <meta property="og:image:height" content="750">
 
-  <meta itemprop="name" content="VICKY WANG">
-  <meta itemprop="url" content="https://vickywang.design">
-
-  <meta itemprop="description" content="Hi! Thanks for stopping by. 
-  I’m currently a Freelancer Designer based in San Francisco. 
-  I enjoy design and code who loves solving challenging problems. 
-  Interested in what you see? Shoot me an email :) ">
-  <meta itemprop="thumbnailUrl" content="https://s3-us-west-1.amazonaws.com/vickywang.design/architecture/NS_Render.jpg">
-
-
-
-  <meta name="twitter:title" content="VICKY WANG">
-  <meta name="twitter:image" content="https://s3-us-west-1.amazonaws.com/vickywang.design/architecture/NS_Render.jpg">
   <meta name="twitter:url" content="https://vickywang.design">
-  <meta name="twitter:card" content="summary">
-  <meta name="twitter:description" content="Hi! Thanks for stopping by. 
-  I’m currently a Freelancer Designer based in San Francisco. 
+  <meta name="twitter:card" content="summary" />
+  <meta name="twitter:site" content="VICKY WANG" />
+  <meta name="twitter:creator" content="VICKY WANG" />
+  <meta property="twitter:title" content="VICKY WANG">
+  <meta property="twitter:description" content="Hi! Thanks for stopping by. 
   I enjoy design and code who loves solving challenging problems. 
-  Interested in what you see? Shoot me an email :) ">
-  <meta name="description" content="">
-
-
-
+  Interested in what you see? Shoot me an email :)">
+  <meta name="twitter:image"
+    content="https://s3-us-west-1.amazonaws.com/vickywang.design/VW.png">
+    <meta property="og:image:type" content="image/png">
+    <meta property="og:image:width" content="750">
+    <meta property="og:image:height" content="750">
 
 </head>
 
 <body>
   <!--head-->
-  <div class="container-head">
+  <div class="container-head" id="topbar">
 
     <div class="container-head-left">
       <a href="http://vickywang.design/"> VICKY WANG
@@ -71,7 +45,7 @@
       </p>
     </div>
 
-    <div class="container-head-right">
+    <div class="container-head-right" id="topbar-right">
       <div> <a herf="/design"> DESIGN </a>
       </div>
       <div> <a href="/architecture"> ARCHITECTURE </a>
@@ -95,6 +69,8 @@
     </div>
   </div>
   <!--body-->
+  <div class="blank-thicker"></div>
+
 
   <!--footer-->
   <div class="container_footer">
